src/test/deca/extension/context/invalid/test_type_non_existant.deca
// Description:
// Test la mauvaise déclaration de tableau
// Resultats:
//  TEST pas valide contextuelement
// Historique:
//    cree le 01/01/2023



{
    typedoesnot[][] tableauInt;
}
